# template_matching_ncc

./: .gitignore  CMakeLists.txt  README.md
src/NormedCrossCorrelation/: CMakeLists.txt  ImageData.h  main.c  ncc.c  ncc.h  ncc_approx.c  ncc_approx.h  ncc_common.c  ncc_common.h  ncc_fft.c  ncc_fft.h  ncc_simd.c  ncc_simd.h  ncc_sum.c  ncc_sum.h
src/image_io/: CMakeLists.txt  image_api.cpp  image_api.h
src/image_io/LibBmp/: libbmp.cpp  libbmp.h
src/image_io/LibJpeg/: jdmarker.c  jerror.c
src/image_io/LibPng/: png.h  pngread.c  pngstruct.h
src/image_io/LibTiff/: libport.h  strtoll.c  strtoull.c  tif_config.h  tiffiop.h
